sfdc/force-app/main/default/objects/Fulcrum_License__c/Fulcrum_License__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description
  >License configuration for MarginArc package with mothership validation</description>
    <label>MarginArc License</label>
</CustomObject>