sfdc/force-app/main/default/objects/Fulcrum_License__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <description>License expiration date</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>