sfdc/force-app/main/default/objects/Fulcrum_License__c/fields/Last_Validated__c.field-meta.xml
<CustomField>
    <fullName>Last_Validated__c</fullName>
    <description>Last successful mothership validation ping</description>
    <label>Last Validated</label>
    <type>DateTime</type>
</CustomField>