sfdc/force-app/main/default/objects/Fulcrum_License__c/fields/License_Key__c.field-meta.xml
<CustomField>
    <fullName>License_Key__c</fullName>
    <description>The license key provided by MarginArc rep</description>
    <label>License Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>