sfdc/force-app/main/default/objects/Fulcrum_License__c/fields/Mothership_URL__c.field-meta.xml
<CustomField>
    <fullName>Mothership_URL__c</fullName>
    <description
  >Mothership API base URL (default: https://api.marginarc.com)</description>
    <label>Mothership URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>