sfdc/force-app/main/default/objects/Fulcrum_License__c/fields/Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_ID__c</fullName>
    <description>Salesforce organization ID (auto-populated)</description>
    <label>Org ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>