sfdc/force-app/main/default/objects/Fulcrum_License__c/fields/Phone_Home_Interval__c.field-meta.xml
<CustomField>
    <fullName>Phone_Home_Interval__c</fullName>
    <description>Days between mothership check-ins (default 7)</description>
    <label>Phone Home Interval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>