sfdc/force-app/main/default/objects/Fulcrum_License__c/fields/Seats_Licensed__c.field-meta.xml
<CustomField>
    <fullName>Seats_Licensed__c</fullName>
    <description>Number of seats licensed</description>
    <label>Seats Licensed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>