sfdc/force-app/main/default/objects/Fulcrum_License__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>License status: active, expired, pending, revoked</description>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>